--- a/src/app/pages/articles/article-card/article-card.component.html
+++ b/src/app/pages/articles/article-card/article-card.component.html
@@ -8,7 +8,7 @@
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                         the
                         card's content.</p>
-                    <button type="button" class="btn btn-light btn-block">Read</button>
+                    <button button type="button" class="btn btn-light btn-block">Read</button>
                 </div>
             </div>
         </div>
