--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="form-group">
 
-                    <button type="submit" class="btn btn-primary" (click)="onRegister(authForm)"
+                    <button button type="submit" class="btn btn-primary" (click)="onRegister(authForm)"
                         [disabled]="!authForm.valid">Sign Up</button>
                 </div>
             </form>
