--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,3 @@
-{{user}}
 <div class="container pt-3 pb-5 mt-4 bg-white rounded  w-25">
     <div class="row">
         <div class="col-xs-12 mb-3">
@@ -18,7 +17,7 @@
                     <input type="password" class="form-control" name="password" ngModel required />
                 </div>
                 <div class="form-group">
-                    <button (click)="onLogin(authForm)" type="submit" class="btn btn-primary me-1"
+                    <button button (click)="onLogin(authForm)" type="submit" class="btn btn-primary me-1"
                         [disabled]="!authForm.valid">Log In</button>
                 </div>
             </form>
