--- a/src/app/pages/user/user-detail/edit-data/edit-data.component.html
+++ b/src/app/pages/user/user-detail/edit-data/edit-data.component.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary me-1">Save</button>
+                    <button button type="submit" class="btn btn-primary me-1">Save</button>
                 </div>
             </form>
         </div>
