--- a/src/app/pages/user/user-detail/picture/picture.component.html
+++ b/src/app/pages/user/user-detail/picture/picture.component.html
@@ -9,7 +9,7 @@
                     <p class="text-secondary mb-1">{{user.email}}</p>
                     <p class="text-muted font-size-sm mt-2 p-1 font-italic">"{{user.bio}}"</p>
                     <div class="mt-3">
-                        <button (click)="set()" class="btn btn-primary mx-05 btn-block">Edit profile</button>
+                        <button button (click)="set()" class="btn btn-primary mx-05 btn-block">Edit profile</button>
                     </div>
                 </div>
             </div>
