--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,9 @@
         <li class="nav-item active">
           <a class="nav-link" [routerLink]="['articles']">Articles</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['users']">Users</a>
+        </li>
       </ul>
     </div>
     <div *ngIf="!isLoggedIn" class="justify-content-end" id="navbarNavDropdown">
