--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,8 +1,13 @@
 <div class="container mt-3 ">
     <div class="container-fluid pb-5">
         <div class="row row-content">
+            <div class="alert alert-danger " *ngIf="error">
+                <p class="mb-0">{{ error }}</p>
+            </div>
             <div class="col-md-12 mb-3">
+
                 <div class="container  pb-3 mt-3 ps-0 pe-0 rounded bg-white">
+
                     <div class="row">
                         <div class="col-xs-12 mb-3 pt-3 ps-4">
                             <h2 class="font-weight-light">List of Users</h2>
@@ -21,29 +26,23 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let item of data">
+                                        <tr *ngFor="let item of data"
+                                            [ngClass]="item.currentUser == true ? 'currentUser' : ''">
                                             <td>{{ item.id }}</td>
                                             <td>{{ item.username }}</td>
                                             <td>{{ item.email }}</td>
                                             <td>{{ item.bio }}</td>
                                             <td><img class="td-user-image" [src]="item.image" /></td>
                                             <td>
-                                                <div class="td-edit m-1">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                        fill="currentColor" class="bi bi-pencil-fill"
-                                                        viewBox="0 0 16 16">
-                                                        <path
-                                                            d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z" />
-                                                    </svg>
-                                                </div>
-                                                <div class="td-delete m-1">
+                                                <button button class="btn td-delete m-1"
+                                                    (click)="deleteUser(item.email)">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                         fill="currentColor" class="bi bi-trash-fill"
                                                         viewBox="0 0 16 16">
                                                         <path
                                                             d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
                                                     </svg>
-                                                </div>
+                                                </button>
 
                                             </td>
 
