--- a/src/app/styles/login-signup/login-signup.scss
+++ b/src/app/styles/login-signup/login-signup.scss
@@ -6,3 +6,12 @@ input.ng-touched.ng-invalid {
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
+
+.alert {
+  &.alert-danger {
+    .errorDesc {
+      font-size: 12px;
+      font-weight: 500;
+    }
+  }
+}
