--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,9 +5,15 @@
         <li class="nav-item active">
           <a class="nav-link" [routerLink]="['']">Home</a>
         </li>
+        <div class="divider"></div>
         <li class="nav-item active">
           <a class="nav-link" [routerLink]="['articles']">Articles</a>
         </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['create-new']">Create New Article</a>
+        </li>
+        <div class="divider"></div>
         <li class="nav-item active">
           <a class="nav-link" [routerLink]="['users']">Users</a>
         </li>
