--- a/src/app/pages/articles/article-card/article-card.component.html
+++ b/src/app/pages/articles/article-card/article-card.component.html
@@ -1,15 +1,11 @@
-<div class="pe-1 ps-1 pb-3 m-n1">
-    <div class="card-deck">
-        <div class="card">
-            <div class="card-block">
-                <img class="card-img-top" [src]="image" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
-                    <button button type="button" class="btn btn-light btn-block">Read</button>
-                </div>
+<div class="card-deck pe-1 ps-1 pb-3 m-n1">
+    <div class="card">
+        <div class="card-block">
+            <img class="card-img-top" [src]="image" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{title}}</h5>
+                <p class="card-text">{{body}}</p>
+                <button button type="button" class="btn btn-light btn-block">Read</button>
             </div>
         </div>
     </div>
