--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -7,20 +7,13 @@
                         <div class="col-xs-12 mb-3 pt-3 ps-4">
                             <h2 class="font-weight-light">Articles</h2>
                         </div>
-                        <div class="col-xs-12 p-4 pt-0 pb-0">
+                        <div class="col-xs-12 p-4 pt-0 pb-0" *ngIf="data">
                             <div class="row">
-                                <div class="col-sm-4 ps-2 pe-2">
-                                    <app-article-card></app-article-card>
+                                <div class="col-sm-4 ps-2 pe-2" *ngFor="let item of data.articles">
+                                    <app-article-card [title]="item.title" [body]="item.body"
+                                        [description]="item.description"></app-article-card>
                                 </div>
-                                <div class="col-sm-4 ps-2 pe-2">
-                                    <app-article-card></app-article-card>
-                                </div>
-                                <div class="col-sm-4 ps-2 pe-2">
-                                    <app-article-card></app-article-card>
-                                </div>
-                                <div class="col-sm-4 ps-2 pe-2">
-                                    <app-article-card></app-article-card>
-                                </div>
+
                             </div>
                         </div>
                     </div>
