--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,2 @@
-<app-cover></app-cover>
-<app-icons></app-icons>
-<app-comments></app-comments>
+<app-articles></app-articles>
+<!-- <additionalComponent></additionalComponent -->
