--- a/src/app/pages/articles/article-card-sidebar/article-card-sidebar.component.html
+++ b/src/app/pages/articles/article-card-sidebar/article-card-sidebar.component.html
@@ -8,8 +8,8 @@
         </div>
 
         <div class="col-md-8 ps-2">
-            <h6 class="">Card title</h6>
-            <p class="card-text">Some quick example text to build on the card title and make </p>
+            <h6 class="">{{title}}</h6>
+            <p class="card-text">{{body}} </p>
         </div>
     </div>
 </div>
