--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,4 +1,3 @@
 <div class="container mt-3 ">
-    {{jsonUser}}
-    <app-user-detail></app-user-detail>
+    <app-user-detail *ngIf="isLoggedIn"></app-user-detail>
 </div>
