clear up, adding log out

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,7 +35,7 @@
           <a appDropDown class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"></a>
           <div class="dropdown-menu end-0" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" [routerLink]="['user']">User</a>
-            <a class="dropdown-item" [routerLink]="['']">Logout</a>
+            <a class="dropdown-item" [routerLink]="['']" (click)="logout()">Logout</a>
           </div>
         </li>
       </ul>
