--- a/src/app/pages/articles/article-card/article-card.component.html
+++ b/src/app/pages/articles/article-card/article-card.component.html
@@ -7,7 +7,7 @@
                 <p class="card-text">{{body}}</p>
                 <div class="d-flex mx-n1">
                     <button button type="button" X class="btn btn-primary btn-block mx-05">Read</button>
-                    <button button class="btn btn-warning mx-05" (click)="editDataClick()">
+                    <button *ngIf="isLoggedIn" button class="btn btn-warning mx-05" (click)="editDataClick()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-pencil-square" viewBox="0 0 16 16">
                             <path
@@ -16,7 +16,7 @@
                                 d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                         </svg>
                     </button>
-                    <button button class="btn btn-danger mx-05" (click)="deleteClick()">
+                    <button *ngIf="isLoggedIn" button class="btn btn-danger mx-05" (click)="deleteClick()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-trash-fill" viewBox="0 0 16 16">
                             <path
