clear up, adding AuthGuard

--- a/src/app/pages/articles/create-new-article/create-new-article.component.html
+++ b/src/app/pages/articles/create-new-article/create-new-article.component.html
@@ -5,7 +5,7 @@
                 <div class="container  pb-3 mt-3 ps-0 pe-0 rounded bg-white">
                     <div class="row">
                         <div class="col-xs-12 mb-3 pt-3 ps-4">
-                            <h2 class="font-weight-light">Create New Article</h2>
+                            <h2 class="font-weight-light">{{componentTitle}}</h2>
                         </div>
                         <div class="col-xs-12 p-4 pt-0 pb-0">
                             <div class="row">
@@ -24,7 +24,8 @@
                                             required></textarea>
                                     </div>
                                     <div class="form-group d-flex justify-content-end">
-                                        <button button type="submit" class="btn btn-primary me-1 ">Publish article
+                                        <button button type="submit"
+                                            class="btn btn-primary me-1 ">{{componentButtonText}}
                                         </button>
                                     </div>
                                 </form>
