--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container">
     <div class="navbar-nav justify-content-start" id="navbarNavDropdown">
       <ul class="navbar-nav">
@@ -19,7 +19,7 @@
         </li>
       </ul>
     </div>
-    <div *ngIf="!isLoggedIn" class="justify-content-end" id="navbarNavDropdown">
+    <div *ngIf="!isLoggedIn" class="justify-content-end">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" [routerLink]="['login']">Log In</a>
@@ -29,7 +29,7 @@
         </li>
       </ul>
     </div>
-    <div *ngIf="isLoggedIn" class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+    <div *ngIf="isLoggedIn" class="justify-content-end" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a appDropDown class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"></a>
@@ -39,6 +39,61 @@
           </div>
         </li>
       </ul>
+    </div>
+  </div>
+</nav> -->
+
+
+<nav class="navbar navbar-expand-lg bg-white ">
+  <div class="container ">
+    <div class="navbar-light w-100">
+      <button appDropDown class="navbar-toggler" type="button">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse">
+        <div class="d-flex justify-content-start">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" [routerLink]="['']">Home</a>
+            </li>
+            <div class="divider"></div>
+            <li class="nav-item active">
+              <a class="nav-link" [routerLink]="['articles']">Articles</a>
+            </li>
+
+            <li *ngIf="isLoggedIn" class="nav-item active">
+              <a class="nav-link" [routerLink]="['create-new']">Create New Article</a>
+            </li>
+            <div class="divider"></div>
+            <li *ngIf="isLoggedIn" class="nav-item active">
+              <a class="nav-link" [routerLink]="['users']">Users</a>
+            </li>
+          </ul>
+        </div>
+
+        <div *ngIf="!isLoggedIn" class="d-flex justify-content-end">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" [routerLink]="['login']">Log In</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" [routerLink]="['signup']">Sign Up</a>
+            </li>
+          </ul>
+        </div>
+        <div *ngIf="isLoggedIn" class="d-flex justify-content-end" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a appDropDown class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"></a>
+              <div class="dropdown-menu end-0" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" [routerLink]="['user']">User</a>
+                <a class="dropdown-item" [routerLink]="['']" (click)="logout()">Logout</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 </nav>
