--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,3 +2,11 @@
   border-right: 1px solid #f2f2f2;
   margin: 5px 0px;
 }
+
+.justify-content-start {
+  width: 100%;
+}
+
+.justify-content-end {
+  width: 100%;
+}
