--- a/src/app/styles/login-signup/login-signup.scss
+++ b/src/app/styles/login-signup/login-signup.scss
@@ -1,5 +1,8 @@
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
+
 input.ng-touched.ng-invalid {
-  border-color: #dc3545;
+  border-color: $danger;
   padding-right: calc(1.5em + 0.75rem);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
@@ -8,6 +11,11 @@ input.ng-touched.ng-invalid {
 }
 
 .alert {
+  span {
+    color: $danger;
+    font-size: 14px;
+    font-weight: 500;
+  }
   &.alert-danger {
     .errorDesc {
       font-size: 12px;
