--- a/src/app/pages/user/user-detail/edit-data/edit-data.component.html
+++ b/src/app/pages/user/user-detail/edit-data/edit-data.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid pt-3 pb-5 bg-white rounded">
     <div class="row row-content">
         <div class="">
-            <form #authForm="ngForm" (ngSubmit)="updateData(authForm)">
+            <form #editData="ngForm" (ngSubmit)="updateData(editData)">
                 <div class="d-flex form-group mb-3">
                     <label for="email-input">Username</label>
                     <input type="text" class="form-control" name="username" [(ngModel)]="username" required />
@@ -19,12 +19,12 @@
                 </div>
                 <div class="d-flex form-group mb-3">
                     <label for="email-input">Image</label>
-                    <input type="file" class="form-control" name="image" (change)="onConvertImage($event)" ngModel
-                        required />
+                    <input type="file" class="form-control" name="image" (change)="onConvertImage($event)"
+                        [(ngModel)]="image" />
                 </div>
 
                 <div class="form-group">
-                    <button button type="submit" class="btn btn-primary me-1">Save</button>
+                    <button button type="submit" class="btn btn-primary me-1" [disabled]="!editData.valid">Save</button>
                 </div>
             </form>
         </div>
