--- a/src/app/pages/user/user-detail/edit-data/edit-data.component.html
+++ b/src/app/pages/user/user-detail/edit-data/edit-data.component.html
@@ -19,8 +19,7 @@
                 </div>
                 <div class="d-flex form-group mb-3">
                     <label for="email-input">Image</label>
-                    <input type="file" class="form-control" name="image" (change)="onConvertImage($event)"
-                        [(ngModel)]="image" />
+                    <input type="file" class="form-control" name="image" (change)="onConvertImage($event)" ngModel />
                 </div>
 
                 <div class="form-group">
