--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,7 +11,7 @@
             <form #authForm="ngForm">
                 <div class="form-group">
                     <label for="email-input">E-mail</label>
-                    <input type="email" class="form-control" name="email" ngModel #email="ngModel"
+                    <input type="email" class="form-control" name="email" [(ngModel)]="emailVal" #email="ngModel"
                         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required />
                 </div>
                 <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert p-0 pt-1">
@@ -24,7 +24,8 @@
                 </div>
                 <div class="form-group mt-3">
                     <label for="password-input">Password</label>
-                    <input type="password" class="form-control" name="password" ngModel #password="ngModel" required />
+                    <input type="password" class="form-control" name="password" [(ngModel)]="passwordVal"
+                        #password="ngModel" required />
                 </div>
                 <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert p-0 pt-1">
                     <span *ngIf="password.errors?.required">
