--- a/src/app/pages/user/user-detail/picture/picture.component.scss
+++ b/src/app/pages/user/user-detail/picture/picture.component.scss
@@ -2,3 +2,9 @@
   margin-right: 0.12rem !important;
   margin-left: 0.12rem !important;
 }
+
+.rounded-circle {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+}
