--- a/src/app/pages/user/user-detail/picture/picture.component.html
+++ b/src/app/pages/user/user-detail/picture/picture.component.html
@@ -2,12 +2,12 @@
     <div class="row row-content ">
         <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-                <img alt="Admin" class="rounded-circle" width="150" [src]="imagePreview">
+                <img *ngIf="imagePreview" alt="Admin" class="rounded-circle" width="150" [src]="imagePreview">
 
                 <div class="mt-3">
                     <h4>{{user.username}}</h4>
                     <p class="text-secondary mb-1">{{user.email}}</p>
-                    <p class="text-muted font-size-sm mt-2 p-1 font-italic">"{{user.bio}}"</p>
+                    <p *ngIf="user.bio" class="text-muted font-size-sm mt-2 p-1 font-italic">"{{user.bio}}"</p>
                     <div class="mt-3">
                         <button button class="btn btn-primary mx-05 btn-block">Edit profile</button>
                     </div>
