--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3 ">
+<div *ngIf="showContainer" class="container mt-3 ">
     <div class="container-fluid pb-5">
         <div class="row row-content">
             <!-- Main -->
