--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -82,8 +82,19 @@
             </li>
           </ul>
         </div>
-        <div *ngIf="isLoggedIn" class="d-flex justify-content-end" id="navbarNavDropdown">
+
+
+        <div *ngIf="isLoggedIn" class="d-flex justify-content-end align-items-center" id="navbarNavDropdown">
+
           <ul class="navbar-nav">
+            <li class="nav-item active">
+              <span class="sessionTimeout">Logging out in: </span><span>{{countdownVal}}</span>
+            </li>
+          </ul>
+
+
+          <ul class="navbar-nav">
+
             <li class="nav-item dropdown">
               <a appDropDown class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"></a>
               <div class="dropdown-menu end-0" aria-labelledby="navbarDropdownMenuLink">
