--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -46,8 +46,10 @@
                 </div>
 
                 <div class="form-group mt-3">
-                    <button button type="submit" class="btn btn-primary" (click)="onRegister(authForm)"
-                        [disabled]="!authForm.valid">Sign Up</button>
+                    <button button type="submit" class="btn btn-primary d-flex" (click)="onRegister(authForm)"
+                        [disabled]="!authForm.valid">Sign Up <div *ngIf="isLoading" class="clearfix ms-1">
+                            <div class="spinner-border float-right" role="status"></div>
+                        </div></button>
                 </div>
             </form>
         </div>
